[gd_scene load_steps=2 format=3 uid="uid://bb6p32llodf5c"]

[ext_resource type="Script" path="res://scenes/GenericItem/generic_item.gd" id="1_b8hli"]

[node name="GenericItem" type="Sprite2D"]
script = ExtResource("1_b8hli")

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(100, 100, 100, 1)
z_index = -1
scale = Vector2(1.05, 1.05)

[node name="Hitbox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
